[gd_scene load_steps=19 format=3 uid="uid://cynwt6kdn6rk7"]

[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui/campaign_ui.gd" id="1_m73j6"]
[ext_resource type="Theme" uid="uid://dg107ll84c5qe" path="res://Objects/Campaign/campaign_ui/theme_campaign_ui_1.tres" id="2_gxvig"]
[ext_resource type="Script" path="res://Objects/Campaign/military/ArmiesContainer.gd" id="2_hbtxh"]
[ext_resource type="Gradient" uid="uid://v0kxx6il6y1y" path="res://Objects/Campaign/campaign_ui/paper_gradient.tres" id="3_5skqx"]
[ext_resource type="Script" path="res://Objects/Campaign/campaign_ui/buildings_UI.gd" id="3_e7y3r"]
[ext_resource type="PackedScene" uid="uid://bmn2o2xccxjc7" path="res://Objects/Campaign/campaign_ui/button_building.tscn" id="4_3i5kl"]
[ext_resource type="Script" path="res://Objects/Campaign/world/map_types_manager.gd" id="4_d6fhq"]
[ext_resource type="Resource" uid="uid://bxvwm4c6x2uue" path="res://Objects/Campaign/buildings/building_manager.tres" id="4_kfbbl"]
[ext_resource type="PackedScene" uid="uid://kplcxvwco21v" path="res://Objects/UI/button.tscn" id="4_pss78"]
[ext_resource type="Texture2D" uid="uid://ku2ja2ipe6a5" path="res://Assets/ui/buildings/building_icon.png" id="5_0c0te"]
[ext_resource type="Texture2D" uid="uid://bl8l1kgli8nod" path="res://Assets/ui/buildings/building_icon_government_hover.png" id="5_1n137"]
[ext_resource type="Texture2D" uid="uid://frbjurrhvkmw" path="res://Assets/ui/buildings/building_icon_government.png" id="6_ov8gu"]
[ext_resource type="Texture2D" uid="uid://bgkuvtdxlxnlw" path="res://Assets/ui/buildings/building_icon_hover.png" id="6_ww1pg"]
[ext_resource type="Texture2D" uid="uid://dlocmixobx0d" path="res://Assets/ui/buildings/building_icon_farm.png" id="7_83dcm"]
[ext_resource type="PackedScene" uid="uid://cxxkxansqr52n" path="res://Objects/Campaign/campaign_ui/overview_container.tscn" id="11_q7mbf"]
[ext_resource type="PackedScene" uid="uid://br1hpckyt33d4" path="res://Objects/UI/speed_button_container.tscn" id="14_x8ggf"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ry246"]
frequency = 0.0088
fractal_octaves = 4
fractal_gain = 0.455

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d5yn1"]
width = 128
height = 128
seamless = true
color_ramp = ExtResource("3_5skqx")
noise = SubResource("FastNoiseLite_ry246")

[node name="CampaingUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m73j6")

[node name="Container" type="Control" parent="."]
z_index = 1000
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_gxvig")

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_right = 472.0
offset_bottom = 48.0

[node name="GoldLabel" type="RichTextLabel" parent="Container/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 14.0
offset_right = 185.0
offset_bottom = 40.0
text = "Gold: "
fit_content = true
scroll_active = false
hint_underlined = false

[node name="ManpowerLabel" type="RichTextLabel" parent="Container/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 229.0
offset_top = 13.0
offset_right = 430.0
offset_bottom = 39.0
text = "Manpower:"
fit_content = true
hint_underlined = false

[node name="Province" type="Panel" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -168.0
offset_right = 389.0
offset_bottom = -21.0
grow_vertical = 0

[node name="PaperTexture" type="TextureRect" parent="Container/Province"]
offset_left = 4.0
offset_top = 2.0
offset_right = 365.0
offset_bottom = 143.0
texture = SubResource("NoiseTexture2D_d5yn1")

[node name="IncomeLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 199.0
offset_top = 32.0
offset_right = 257.0
offset_bottom = 58.0
text = "Income"
metadata/_edit_lock_ = true

[node name="PopulationLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 31.0
offset_right = 112.0
offset_bottom = 57.0
text = "Population"
metadata/_edit_lock_ = true

[node name="NameLabel" type="Label" parent="Container/Province"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 167.0
offset_bottom = 32.0
text = "Name"
metadata/_edit_lock_ = true

[node name="BuildingsUI" type="Control" parent="Container/Province"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 22.0
offset_top = 88.0
offset_right = 341.0
offset_bottom = 131.0
script = ExtResource("3_e7y3r")
buildings_manager = ExtResource("4_kfbbl")
np_buildings_available_container = NodePath("ToBeBuiltContainer/ScrollContainer/HBoxContainer")
icon_default = ExtResource("6_ww1pg")
icon_building_government = ExtResource("6_ov8gu")
icon_building_farm = ExtResource("7_83dcm")
icon_building_temple = ExtResource("5_1n137")

[node name="BuildingsContainer" type="HBoxContainer" parent="Container/Province/BuildingsUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0376176
anchor_top = -1.83721
anchor_right = -0.0376176
anchor_bottom = -1.83721
offset_left = 8.0
offset_top = 64.0
offset_right = 72.0
offset_bottom = 128.0

[node name="AddBuilding" type="Button" parent="Container/Province/BuildingsUI/BuildingsContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("5_0c0te")

[node name="ButtonBuilding" parent="Container/Province/BuildingsUI/BuildingsContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="ButtonBuilding2" parent="Container/Province/BuildingsUI/BuildingsContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="ButtonBuilding3" parent="Container/Province/BuildingsUI/BuildingsContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="OverviewContainer" parent="Container/Province/BuildingsUI" instance=ExtResource("11_q7mbf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.056
anchor_top = -2.047
anchor_right = -0.056
anchor_bottom = -2.047
offset_left = -0.136
offset_top = -252.979
offset_right = 407.864
offset_bottom = 0.0211105

[node name="ToBeBuiltContainer" type="PanelContainer" parent="Container/Province/BuildingsUI"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = -0.056
anchor_top = -1.908
anchor_right = -0.056
anchor_bottom = -1.908
offset_left = 11.864
offset_top = 51.044
offset_right = 298.864
offset_bottom = 131.044
mouse_force_pass_scroll_events = false

[node name="ScrollContainer" type="ScrollContainer" parent="Container/Province/BuildingsUI/ToBeBuiltContainer"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_ww1pg")

[node name="ButtonBuilding" parent="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer/HBoxContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="ButtonBuilding2" parent="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer/HBoxContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="ButtonBuilding3" parent="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer/HBoxContainer" instance=ExtResource("4_3i5kl")]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Container"]
layout_mode = 0
offset_left = 3.0
offset_top = 127.0
offset_right = 121.0
offset_bottom = 226.0

[node name="ArmiesContainer" type="VBoxContainer" parent="Container/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
script = ExtResource("2_hbtxh")

[node name="Title" type="Label" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
text = "ARMIES
"

[node name="Button" type="Button" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
focus_mode = 0
text = "TESTBUTTON "

[node name="VBoxContainer" type="VBoxContainer" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TotalLabel" type="Label" parent="Container/PanelContainer/ArmiesContainer"]
layout_mode = 2
text = "Total:"

[node name="MapTypesManager" type="PanelContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -93.0
offset_right = -23.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("4_d6fhq")

[node name="HBoxContainer" type="HBoxContainer" parent="Container/MapTypesManager"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BtnPoliticalMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Political "

[node name="BtnTerrainMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Terrain "

[node name="BtnReligionMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Religion "

[node name="BtnCultureMap" parent="Container/MapTypesManager/HBoxContainer" instance=ExtResource("4_pss78")]
layout_mode = 2
text = " Culture"

[node name="TimePanel" type="PanelContainer" parent="Container"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -279.0
offset_bottom = 44.0
grow_horizontal = 0

[node name="SpeedButtonContainer" parent="Container/TimePanel" instance=ExtResource("14_x8ggf")]
layout_mode = 2

[connection signal="pressed" from="Container/Province/BuildingsUI/BuildingsContainer/AddBuilding" to="Container/Province/BuildingsUI" method="_on_add_building_pressed"]
[connection signal="pressed" from="Container/Province/BuildingsUI/ToBeBuiltContainer/ScrollContainer/HBoxContainer/BackButton" to="Container/Province/BuildingsUI" method="_on_back_button_pressed"]
[connection signal="resized" from="Container/PanelContainer/ArmiesContainer" to="Container/PanelContainer/ArmiesContainer" method="_on_resized"]
[connection signal="pressed" from="Container/PanelContainer/ArmiesContainer/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnPoliticalMap" to="Container/MapTypesManager" method="_on_btn_political_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnTerrainMap" to="Container/MapTypesManager" method="_on_btn_terrain_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnReligionMap" to="Container/MapTypesManager" method="_on_btn_religion_map_button_down"]
[connection signal="button_down" from="Container/MapTypesManager/HBoxContainer/BtnCultureMap" to="Container/MapTypesManager" method="_on_btn_culture_map_button_down"]
